5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1670_1396.log
== TEST (2019-04-16 18:07:12) 
-- CODE:
x=float(input("Digite o valor consumido: "))
if(x<=300):
	y=x*0.1
	print(round(x+y,2))
else:
   y=x-(x*0.94)
	print(round(x+y,2))		
			
-- ERROR:
File "XXXX", line 7
    print(round(x+y,2))		
                        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:07:36) 
-- CODE:
x=float(input("Digite o valor consumido: "))
if(x<=300):
	y=x*0.1
	z=x+y
	print(round(z,2))
else:
   y=x-(x*0.94)
	print(round(x+y,2))		
			
-- ERROR:
File "XXXX", line 8
    print(round(x+y,2))		
                        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:07:54) 
-- CODE:
x=float(input("Digite o valor consumido: "))
if(x<=300):
	y=x*0.1
	z=x+y
	print(round(z,2))
else:
   y=x-(x*0.94)
	z=x+y
	print(round(z,2))
			
-- ERROR:
File "XXXX", line 8
    z=x+y
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:08:05) 
-- CODE:
x=float(input("Digite o valor consumido: "))
if(x<=300):
	y=x*0.1
	z=x+y
	print(round(z,2))
else:
   y=x-(x*0.94)
	u=x+y
	print(round(u,2))
			
-- ERROR:
File "XXXX", line 8
    u=x+y
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:08:29) 
-- CODE:
x=float(input("Digite o valor consumido: "))
if(x<=300):
	y=x*0.1
	z=x+y
	print(round(z,2))
else:
   y=x-(x*0.94)
	y=y+x
	

			
-- ERROR:
File "XXXX", line 8
    y=y+x
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:09:20) 
-- CODE:
x=float(input("Digite o valor consumido: "))
if(x>300):
	y=x-(x*0.94)
	z=x+y
	print(round(z,2))

			
-- ERROR:
File "XXXX", line 8
    y=y+x
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:09:37) 
-- CODE:
x=float(input("Digite o valor consumido: "))
if(x>300):
	y=x-(x*0.94)
	z=x+y
	print(round(z,2))
else:
	y=x*0.1

			
-- ERROR:
File "XXXX", line 8
    y=y+x
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:09:44) 
-- CODE:
x=float(input("Digite o valor consumido: "))
if(x>300):
	y=x-(x*0.94)
	z=x+y
	print(round(z,2))
else:
	y=x*0.1
	z=x+y

			
-- ERROR:
File "XXXX", line 8
    y=y+x
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:10:03) 
-- CODE:
x=float(input("Digite o valor consumido: "))
if(x>300):
	y=x-(x*0.94)
	z=x+y
else:
	y=x*0.1
	z=x+y
print(round(z,2))	

			
-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:10:06) 
-- CODE:
x=float(input("Digite o valor consumido: "))
if(x>300):
	y=x-(x*0.94)
	z=x+y
else:
	y=x*0.1
	z=x+y
print(round(z,2))	

			
-- EXECUTION TIME:
0.146006
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
246.95
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
387.06
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
530.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
